--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^6.0.1",
     "astro": "^3.6.4",
     "astro-auto-import": "^0.4.1",
     "date-fns": "^2.30.0",
@@ -54,8 +55,8 @@
     "prettier-plugin-astro": "^0.12.2",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "sass": "^1.69.5",
-    "tailwindcss": "^3.3.5",
     "tailwind-bootstrap-grid": "^5.1.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "5.3.2"
   }
 }
