--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.5",
+    "@astrojs/netlify": "^3.1.1",
     "@astrojs/react": "^3.0.6",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
