--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,14 +1,14 @@
 {
   "site": {
     "title": "Astroplate",
-    "base_url": "https://astroplate.netlify.app",
+    "base_url": "https://golden-mooncake-bccdea.netlify.app/",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
-    "logo": "/images/logo.png",
-    "logo_darkmode": "/images/logo-darkmode.png",
-    "logo_width": "150",
-    "logo_height": "30",
+    "logo": "/images/logo_monarca_c.png",
+    "logo_darkmode": "/images/logo_monarca_c.png",
+    "logo_width": "60",
+    "logo_height": "60",
     "logo_text": "Astroplate"
   },
 
@@ -28,7 +28,7 @@
   },
 
   "navigation_button": {
-    "enable": true,
+    "enable": false,
     "label": "Get Started",
     "link": "https://github.com/zeon-studio/astroplate"
   },
