--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,7 @@
     "base_url": "https://golden-mooncake-bccdea.netlify.app/",
     "base_path": "/",
     "trailing_slash": false,
-    "favicon": "/images/favicon.png",
+    "favicon": "/images/favicon_c.png",
     "logo": "/images/logo_monarca_c.png",
     "logo_darkmode": "/images/logo_monarca_c.png",
     "logo_width": "60",
